tests/config_module_system_node_allow_root_relative/config_module_system_node_allow_root_relative.exp
Error ----------------------------------------------------------------------------------------------- subdir/test.js:7:2

Cannot cast `ambiguous` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   subdir/test.js:7:2
   7| (ambiguous: empty)
       ^^^^^^^^^

References:
   ambiguous.js:3:14
   3| const value: "user_code" = "user_code";
                   ^^^^^^^^^^^ [1]
   subdir/test.js:7:13
   7| (ambiguous: empty)
                  ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:10:2

Cannot cast `sub_ambiguous` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   subdir/test.js:10:2
   10| (sub_ambiguous: empty)
        ^^^^^^^^^^^^^

References:
   subdir/ambiguous.js:3:14
    3| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:10:17
   10| (sub_ambiguous: empty)
                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:14:2

Cannot cast `user_code` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   subdir/test.js:14:2
   14| (user_code: empty)
        ^^^^^^^^^

References:
   user_code.js:3:14
    3| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:14:13
   14| (user_code: empty)
                   ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:17:2

Cannot cast `sub_user_code` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   subdir/test.js:17:2
   17| (sub_user_code: empty)
        ^^^^^^^^^^^^^

References:
   subdir/user_code.js:3:14
    3| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:17:17
   17| (sub_user_code: empty)
                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:21:2

Cannot cast `node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-cast]

   subdir/test.js:21:2
   21| (node_code: empty)
        ^^^^^^^^^

References:
   node_modules/node_code.js:3:14
    3| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:21:13
   21| (node_code: empty)
                   ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:24:2

Cannot cast `sub_node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-cast]

   subdir/test.js:24:2
   24| (sub_node_code: empty)
        ^^^^^^^^^^^^^

References:
   node_modules/subdir/node_code.js:3:14
    3| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:24:17
   24| (sub_node_code: empty)
                       ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- subdir/test.js:27:25

Cannot resolve module `nonexistent`. [cannot-resolve-module]

   27| import nonexistent from 'nonexistent'
                               ^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- subdir/test.js:28:29

Cannot resolve module `subdir/nonexistent`. [cannot-resolve-module]

   28| import sub_nonexistent from 'subdir/nonexistent'
                                   ^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:5:2

Cannot cast `ambiguous` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:5:2
   5| (ambiguous: empty)
       ^^^^^^^^^

References:
   ambiguous.js:3:14
   3| const value: "user_code" = "user_code";
                   ^^^^^^^^^^^ [1]
   test.js:5:13
   5| (ambiguous: empty)
                  ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:8:2

Cannot cast `sub_ambiguous` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:8:2
   8| (sub_ambiguous: empty)
       ^^^^^^^^^^^^^

References:
   subdir/ambiguous.js:3:14
   3| const value: "user_code" = "user_code";
                   ^^^^^^^^^^^ [1]
   test.js:8:17
   8| (sub_ambiguous: empty)
                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:12:2

Cannot cast `user_code` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:12:2
   12| (user_code: empty)
        ^^^^^^^^^

References:
   user_code.js:3:14
    3| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   test.js:12:13
   12| (user_code: empty)
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:15:2

Cannot cast `sub_user_code` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:15:2
   15| (sub_user_code: empty)
        ^^^^^^^^^^^^^

References:
   subdir/user_code.js:3:14
    3| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   test.js:15:17
   15| (sub_user_code: empty)
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:19:2

Cannot cast `node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:19:2
   19| (node_code: empty)
        ^^^^^^^^^

References:
   node_modules/node_code.js:3:14
    3| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   test.js:19:13
   19| (node_code: empty)
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:22:2

Cannot cast `sub_node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:22:2
   22| (sub_node_code: empty)
        ^^^^^^^^^^^^^

References:
   node_modules/subdir/node_code.js:3:14
    3| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   test.js:22:17
   22| (sub_node_code: empty)
                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:25:25

Cannot resolve module `nonexistent`. [cannot-resolve-module]

   25| import nonexistent from 'nonexistent'
                               ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:26:29

Cannot resolve module `subdir/nonexistent`. [cannot-resolve-module]

   26| import sub_nonexistent from 'subdir/nonexistent'
                                   ^^^^^^^^^^^^^^^^^^^^



Found 16 errors
